--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -1,14 +1,26 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.124.8:3307/gulimall_pms
+    url: jdbc:mysql://192.168.10.250:3307/gulimall_pms
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
+  cloud:
+    nacos:
+      discovery:
+        server-addr: http://192.168.10.250:8848
+  application:
+    name: gulimall-product
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 
 server:
   port: 10001
+
+logging:
+  level:
+    com.atguigu.gulimall: debug
