--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,10 @@
     <name>gulimall</name>
     <description>聚合服务</description>
     <packaging>pom</packaging>
-
+    <properties>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>2020.0.2</spring-cloud.version>
+    </properties>
     <modules>
         <module>gulimall-coupon</module>
         <module>gulimall-member</module>
