--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -22,6 +22,10 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
       enabled: true
+  cloud:
+    nacos:
+      discovery:
+        server-addr: http://192.168.10.250:8848
   redis:
     open: false  # 是否开启redis缓存  true开启   false关闭
     database: 0
@@ -37,6 +41,8 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
   mvc:
     throw-exception-if-no-handler-found: true
+  application:
+    name: renren-fast
 #  resources:
 #    add-mappings: false
 
