--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -3,10 +3,18 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.124.8:3307/gulimall_sms
+    url: jdbc:mysql://192.168.10.250:3307/gulimall_sms
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
+
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.10.250:8848
+
+  application:
+    name: gulimall-coupon
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
